--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+  cache:
+    type: redis
+
+  redis:
+    host: localhost
+    port: 6379
 
 eureka:
   instance:
